tests/invalid/loops/skip_not_in_loop.rs
/*
compilationExitCode: 3
*/

main(): i32 {
    skip;
}